add offline support with service worker and manifest

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -109,3 +109,10 @@ body {
     border-color: #4d4d4d;
     box-shadow: 0 0 3px #4d4d4d;
 }
+
+.checkBtn{
+    display: none;
+    position: absolute;
+    padding: .5em;
+    background-color: #ff2c2c;
+}
