--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -113,6 +113,14 @@ body {
 .checkBtn{
     display: none;
     position: absolute;
+    right: 4vh;
+    cursor: pointer;
     padding: .5em;
-    background-color: #ff2c2c;
+    background-color: $primary-color;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0 0 2px black;
+    &:hover{
+        background-color: #fff;
+    }
 }
