--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -70,14 +70,14 @@ body {
         background-color: #EEEEEE;
         border: none;
         transition: .1s ease-in;
+        border-radius: .4rem;
         &:hover {
             cursor: pointer;
         }
         &:active {
-            background-color: #e0e0e0;
             box-shadow: 0 0 3px #4d4d4d;
             background-color: #ebebeb;
-            border: none;
+            transform: scale(.98);
         }
         &:focus {
             outline: 0;
