--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -18,7 +18,7 @@ body {
     div {
         margin-top: 2vh;
         padding-left: 2vh;
-        a {
+        span.title {
             color: black;
             text-decoration: none;
             font-family: sans-serif;
